--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,12 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.splash=C:\\Users\\DevMike\\Pictures\\Screenshot.png
+application.title=OpusList
+application.vendor=DevMike
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +35,7 @@ dist.jar=${dist.dir}/OpusList.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/OpusList
+endorsed.classpath=
 excludes=
 file.reference.gson-2.8.8.jar=C:\\Users\\DevMike\\Downloads\\gson-2.8.8.jar
 includes=**
@@ -73,11 +77,12 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=OpusList
-main.class=spdvi.MainForm
+main.class=main.java.spdvi.MainForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=mit
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
