--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
+#*.jar
 *.war
 *.nar
 *.ear
@@ -20,3 +21,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+#/dist/
